# micropicodrive

./: LICENSE  README.md
Firmware/: CMakeLists.txt  EventMachine.c  EventMachine.h  MicroDriveControl.c  MicroDriveControl.h  MicroPicoDrive.c  PIO_machines.pio  SharedBuffers.c  SharedBuffers.h  SharedEvents.h  UserInterface.c  UserInterface.h
Firmware/pff/: diskio.c  diskio.h  pffconf.h
Firmware/ssd1306/: ssd1306.c  ssd1306.h
Hardware/: BOM.txt
Hardware/MicroPicoDrive/: MicroPicoDrive.kicad_pcb  MicroPicoDrive.kicad_pcb_  MicroPicoDrive.kicad_prl  MicroPicoDrive.kicad_pro  MicroPicoDrive.kicad_sch  RPi_Pico.kicad_sym  RPi_Pico.lib  SN74LVC1T45DBVR.lib  TXU0304QPWRQ1.lib  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/MicroPicoDrive/EdgeCon.pretty/: Edge_connector_02x08.kicad_mod
Hardware/MicroPicoDrive/Fabrication/: MicroPicoDrive-B_Cu.gbl  MicroPicoDrive-B_Mask.gbs  MicroPicoDrive-B_Paste.gbp  MicroPicoDrive-B_Silkscreen.gbo  MicroPicoDrive-Edge_Cuts.gm1  MicroPicoDrive-F_Cu.gtl  MicroPicoDrive-F_Mask.gts  MicroPicoDrive-F_Paste.gtp  MicroPicoDrive-F_Silkscreen.gto  MicroPicoDrive-NPTH-drl_map.gbr  MicroPicoDrive-NPTH.drl  MicroPicoDrive-PTH-drl_map.gbr  MicroPicoDrive-PTH.drl
Hardware/MicroPicoDrive/RPi_Pico.pretty/: RPi_Pico_SMD_TH.kicad_mod
Hardware/MicroPicoDrive/SN74LVC1T45DBVR.pretty/: SOT95P280X145-6N.kicad_mod
Hardware/MicroPicoDrive/TXU0304QPWRQ1.pretty/: TXU0304QPWRQ1.kicad_mod
Hardware/MicroPicoDriveCartridge/: CartridgeComponents.bak  CartridgeComponents.kicad_sym
Software/: MicroDriveTools.sln
Software/MDTools/: MDTools.csproj  Program.cs
Software/MDToolsUI/: BatchConverter.cs  DeviceNameSelector.cs  DirectoryExplorer.cs  InputBox.cs  MDToolsUI.csproj  MediaInfo.cs  Program.cs  Utils.cs
Software/MicroDriveTools/: ConvertTools.cs  MicroDriveTools.csproj
Software/TestTools/: Program.cs  SAVE1.MDV  TestTools.csproj  caca.mdv  carttest.mdv  carttest2.mdv  fmt.mdv  pacman_patched.mdv  pepe.mdv
(+31 files in other folders)
